@@ -1,3 +1,7 @@
+2009-02-06  Torsten Schoenfeld  <kaffeetisch@gmx.de>
+
+	* t/filename.t: Test Glib->filename_to_uri with hostname == undef.
+
 2009-02-05  Torsten Schoenfeld  <kaffeetisch@gmx.de>
 
 	* MakeHelper.pm: Deprecate
